--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ body {
   z-index: 1;
   padding: 0;
   bottom: 75px;
-  right: 50px;
+  left: 50px;
   width: 64px;
   height: 64px;
   font-size: 36px;
